--- a/colleen.html
+++ b/colleen.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/student1.css">
-    <link rel="stylesheet" href="css/student2.css">
-    <!-- <link rel="stylesheet" href="css/student3.css"> -->
-      <title>Teas</title>
+    <title>Teas</title>
 </head>
 <body>
     <a href="#main">Skip To Main Content</a>
@@ -26,13 +24,13 @@
 
     <main>
         <div class = "gallery">
-            <img src="images/black_tea.jpg" width = "200" alt="fancy tea mug with black_tea">
-            <img src="images/chai_tea.jpg"  width = "200" alt="an indian chai">
-            <img src="images/english_breakfast.jpg" width = "200" alt="a dark tea option">
-            <img src="images/green_tea.jpg" width = "200" alt="a loose leaf green tea">
-            <img src="images/lemon_ginger_tea.jpg" width = "200" alt="light tea with lemon and ginger">
-            <img src="images/tea_collection.jpg" alt="collection of loose leaf tea">
-            <img src="images/long_island_ice_tea.jpg" alt="a icy Long Island tea (alcoholic)">
+            <img class="item1" src="images/black_tea.jpg" width = "200" alt="fancy tea mug with black_tea">
+            <img class="item2" src="images/chai_tea.jpg"  width = "200" alt="an indian chai">
+            <img class="item3" src="images/english_breakfast.jpg" width = "200" alt="a dark tea option">
+            <img class="item4" src="images/green_tea.jpg" width = "200" alt="a loose leaf green tea">
+            <img class="item5" src="images/lemon_ginger_tea.jpg" width = "200" alt="light tea with lemon and ginger">
+            <img class="item6" src="images/tea_collection.jpg" alt="collection of loose leaf tea">
+            <img class="item7" src="images/long_island_ice_tea.jpg" alt="a icy Long Island tea (alcoholic)">
             </div>  
     </main>
 </body>
